--- a/vignettes/artificial_intelligence_evolution.Rmd
+++ b/vignettes/artificial_intelligence_evolution.Rmd
@@ -4,7 +4,7 @@ author: "Alfonso R. Reyes"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Artificial Intelligence over the years}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
