--- a/vignettes/gas_influx_overbalanced.Rmd
+++ b/vignettes/gas_influx_overbalanced.Rmd
@@ -4,7 +4,7 @@ author: "Alfonso R. Reyes"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Gas Inflow Overbalanced}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
